--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="big-container position-relative">
+    <div class="bg-light position-relative">
       <div class="lion-bg mt-5 d-none d-md-block"></div>
       <section class="my-4 w-75 w-md-50 mx-auto d-flex flex-column justify-content-center">
         <h4 class="lato text-center">PanAmerican Fantasy Convention 2021 Sponsors</h4>
