--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,7 @@
   <div class="lion-bg-tickets position-fixed"></div>
 
   <header class="border-bottom border-primary d-none d-md-block">
-    <div class="treasure position-absolute d-none d-md-block"> </div>
+    <div class="treasure d-none d-md-block"> </div>
     <nav class="bg-dark translucid ">
       <ul class='d-flex justify-content-end w75 p-0 my-0 mx-auto lato'>
         <li><a href='#' class="text-secondary"><i class="fab fa-facebook-f"></i></a></li>
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="big-container">
+    <div class="transparent position-relative">
       <section class="w-75 w-md-50 mx-auto d-flex flex-column justify-content-center d-md-flex">
         <h1 class="lato text-center">Select Tickets</h1>
 
@@ -126,6 +126,7 @@
 
       <section class="mx-auto border-top border-primary py-5">
         <h4 class="lato text-center">Select Your Lunch</h4>
+
         <div class="d-flex flex-column border border-secondary w-75 mx-auto my-3">
           <div class="d-flex bg-light justify-content-center">
             <h5 class="lato">January 16</h5>
@@ -180,6 +181,32 @@
       </section>
     </div>
 </main>
+
+<footer class="d-none d-md-flex flex-column">
+  <div class="bg-dark d-flex flex-column">
+    <div class="p-3 pb-0">
+      <h5 class="lato text-secondary text-center translucid p-3">Partner</h5>
+    </div>
+    <ul class="w75 d-flex justify-content-around mx-auto p-3 pt-0">
+      <li class="pb-3"><a href="#"><img class="footer-logo" src="assets/wizards-logo.png" alt="wizards"></a></li>
+      <li class="pb-3"><a href="#"><img class="footer-logo" src="assets/WhiteWolfLogo.png" alt="white-wolf"></a></li>
+      <li class="pb-3"><a href="#"><img class="footer-logo" src="assets/blizard.png" alt="blizzard"></a></li>
+      <li class="pb-3"><a href="#"><img class="footer-logo" src="assets/NZ.png" alt="NZ-Tourism"></a></li>
+    </ul>
+  </div>
+  <div class="bot-bar-about bg-light text-dark">
+    <div class="w-75 d-flex py-3 mx-auto justify-content-center">
+      <div class="sponsor-holder d-flex justify-content-center mx-2 border border-0">
+        <a href="#" class="my-3 d-flex align-items-center">
+          <img src="assets/wizards-logo.png" alt="wizards" class="py-auto footer-bottom-logo">
+        </a>
+      </div>
+      <p class="text-small my-auto mx-3">
+        I is not fat, i is fluffy making bread on the bathrobe sitting in a box
+      </p>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
